[package]
name = "mellanite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_egui = "0.21.0"
bytemuck = "1.13.1"
fxhash = "0.2.1"
indexmap = "2.0.0"
rand = "0.8.5"
slab = "0.4.9"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
